grails-app/assets/stylesheets/app/layout.less
@import (reference) "../vendors/todc/less/todc-bootstrap.less";
@import (reference) "./variables.less";
@import (reference) "./mixin.less";

*[type="text/icescrum-template"] {
  display: none;
}

html, body {
  height: 100%;
  overflow: hidden;
}

body {
  &.isInFullScreen {
    header {
      display: none;
    }
  }
  &.loading {
    cursor: progress;
    &.splash-screen {
      > #app-loading {
        .make-row();
        display: block;
        margin: auto;
        position: absolute;
        top: 50%;
        left: 0;
        right: 0;
        .translate(0, -50%);
        .logo {
          height: 250px;
          width: 250px;
          margin-left: 50%;
          .translate(-50%; 0);
        }
        .loading-circle {
          stroke: @navbar-masthead-default-bg;
          stroke-width: 10px;
          stroke-linecap: butt;
        }
        .loading-text {
          font-size:16px;
          font-weight:bold;
          margin-left:10px;
          padding-left:10px;
        }
      }
      > .container-fluid, header {
        visibility: hidden;
        opacity: 0;
      }
    }
  }
  .loading-text {
    display: none;
  }
  &.app-ready {
    &.splash-screen {
      .loading-text {
        display: block;
      }
    }
  }
  > #app-loading {
    display: none;
  }
}

header {
  background-color: @navbar-masthead-inverse-bg;
  border-color: @navbar-masthead-inverse-border;
  .navbar-toggle {
    margin-top: 8px;
    margin-bottom: 8px;
  }
  > nav#menu-header {
    margin-bottom: 0;
    border-radius: 0;
  }
  .logo {
    margin-left: -20px;
    margin-bottom: -15px;
    margin-top: -15px;
  }
  .navbar-masthead {
    margin-bottom: 0;
    .navbar-nav {
      margin: 8px 0;
    }
    .navbar-nav.menubar {
      > li {
        &.menuitem {
          border: 1px solid transparent;
          margin-top: -2px;
          &.active {
            > a {
              color: #fff;
              font-weight: bold;
            }
            @media (min-width: @grid-float-breakpoint-max) {
              &:after {
                position: absolute;
                bottom: -11px;
                left: 50%;
                display: inline-block;
                margin-left: -8px;
                content: '';
                border-right: 8px solid transparent;
                border-bottom: 8px solid @body-bg;
                border-left: 8px solid transparent;
              }

              &#project:after {
                border-bottom-color: @view-bg;
              }
            }
          }
        }
        > a {
          padding: 5px;
          padding-left: 10px;
        }
      }
    }
    .navbar-right {
      form.navbar-form {
        @media (min-width: @grid-float-breakpoint) {
          .form-control {
            max-width: 150px;
          }
        }
        .search {
          .context {
            .text-overflow();
            max-width: 100px;
            vertical-align: top;
            display: inline-block;
          }
          &:hover {
            .search-status.fa-times:before {
              content: "\f00d";
            }
          }
          &:not(:hover) {
            .search-status.fa-times:before {
              content: "\f0b0";
            }
          }
        }
      }
      margin-right: 0;
    }
  }

  .navbar-user {
    margin-top: 6px;
    cursor: pointer;
  }
  .navbar-notif {
    margin: 9px 15px 0 0;
    height: 28px;
    width: 28px;
    position: relative;
    cursor: pointer;
    .fa {
      font-size: 28px;
      color: #fff;
      &.empty {
        color: #ccc;
      }
    }
    .badge {
      position: absolute;
      top: 18px;
      left: 11px;
      font-size: 0.8em;
      background: none;
      color: #fff;
    }
  }
  .notifications {
    .disable-text-selection;
    width: 500px;
    max-height: 500px;
    overflow: auto;
    padding: 15px;
    .media {
      opacity: 0.5;
      &.unread, &:hover {
        opacity: 1;
      }
    }
    h4 {
      margin: 0;
      a {
        color: #000;
      }
    }
  }
  .profile-panel {
    width: 400px;
    padding: 15px;
    .btn-toolbar {
      margin-top: 10px;
      .btn {
        margin-top: 0;
        margin-bottom: 0;
      }
    }
  }
  .main-dropdown-menu {
    max-width: 250px;
    li.project a {
      .text-overflow();
      &.active {
        font-weight: bold;
      }
    }
    li span.current-project-name {
      display: inline-block;
      float: right;
      clear: both;
    }
  }
}
/* ... */

